--- a/css/main.css
+++ b/css/main.css
@@ -128,6 +128,10 @@
       flex-flow: column;
      }
 
+     header .content-wrapper a {
+       color: black;
+     }
+
      header nav {
        width: 75%;
        display: flex;
@@ -173,14 +177,41 @@
     }
 
      /* main */
-     main {
-      margin: 0 20px;
-     }
-  
      section,
      aside {
        margin: 30px 0;
      }
+
+     aside {
+       background-color: #008045ad;
+     }
+
+     .reviews {
+      background-color: #00806299;
+    }
+
+     /* form */
+    input[type=text] {
+      box-sizing: border-box;
+      width: 100%;
+      color: #2a423a;
+      font-style: italic;
+      padding: 1em;
+    }
+     
+    input[type=button] {
+      width: 100%;
+      padding: 20px 0;
+      margin-top: 20px;
+      background-color: #2a423a;
+      font-family: 'Poppins', Helvetica, Arial, sans-serif;
+      font-weight: 500;
+      font-size: 1.125em;
+      color: #e2e3ed;
+      border: none;
+      text-align: center;
+      text-transform: uppercase;
+    }
 
   
   /* ==========================================================================
@@ -339,7 +370,10 @@
     }
 
     /* main */
-    main {
+    .hero-area,
+    aside,
+    .features,
+    .reviews {
       padding: 0 60px;
     }
 
@@ -403,7 +437,10 @@
     width: 100%;
   }
   
-    main {
+    .hero-area,
+    aside,
+    .features,
+    .reviews {
       padding: 0 120px;
     }
 
