--- a/css/faq/styles.css
+++ b/css/faq/styles.css
@@ -4,19 +4,43 @@ Faq Page
 ==========
 */
 
-
-
-/***** TABLET *****/
-@media only screen and (min-width: 768px) {
-/* questions */
-.questions .questions-content {
-    display: flex;
-    flex-flow: row wrap;
+.questions {
+    background-color: #527158;
 }
 
 .questions .questions-content div {
-    width: 50%;
-    padding: 0 50px 0 0;
-    box-sizing: border-box;
+    padding: 15px 0;
 }
-  }
+
+/***** TABLET *****/
+@media only screen and (min-width: 768px) {
+    .questions {
+        font-size: 1.2rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .questions .content-wrapper {
+        width: 85%;
+    }
+
+    .questions .questions-content {
+        display: flex;
+        flex-flow: row wrap;
+        font-size: 1rem;
+    }
+
+    .questions .questions-content div {
+        width: 50%;
+        padding: 20px 20px;
+        box-sizing: border-box;
+    }
+}
+
+/***** DESKTOP *****/
+@media only screen and (min-width: 1200px) {
+    .questions {
+        font-size: 1.5rem;
+    }
+}
