--- a/css/about/styles.css
+++ b/css/about/styles.css
@@ -11,8 +11,21 @@
 }
 
 /* map */
-.map {
-  display: none;
+.map figure {
+  width: 100%;
+  height: 0;
+  padding-bottom: 125%;
+  overflow: hidden;
+  position: relative;
+  margin: 0;
+}
+
+.map iframe {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 /* contact */
