--- a/css/about/styles.css
+++ b/css/about/styles.css
@@ -45,8 +45,9 @@
   margin: 40px 0;
 }
 
-.contact address h2 {
-  font-weight: 100;
+.contact address .contact-title strong {
+  font-size: 1.3rem;
+  margin: 18px 0;
 }
 
 .contact address p {
@@ -57,6 +58,7 @@
 
 /***** TABLET *****/
 @media only screen and (min-width: 768px) {
+
   /* main */
   .mission,
   .contact {
@@ -64,7 +66,7 @@
     justify-content: center;
   }
 
- .content-wrapper {
+  .content-wrapper {
     width: 80%;
   }
 
@@ -98,7 +100,7 @@
 
   .contact address div {
     width: 50%;
-    display: flex;    
+    display: flex;
     flex-flow: column;
   }
 
@@ -111,6 +113,7 @@
 
 /***** DESKTOP *****/
 @media only screen and (min-width: 1200px) {
+
   /* contact */
   .content-wrapper h1 {
     font-size: 3rem;
